@@ -1,6 +1,5 @@
 package io.zak.inventory;
 
-import android.graphics.drawable.Drawable;
 import android.os.Bundle;
 import android.util.Log;
 import android.view.View;
@@ -15,7 +14,6 @@ import android.widget.TextView;
 import androidx.annotation.Nullable;
 import androidx.appcompat.app.AlertDialog;
 import androidx.appcompat.app.AppCompatActivity;
-import androidx.appcompat.content.res.AppCompatResources;
 
 import java.util.List;
 
@@ -44,8 +42,6 @@ public class AddProductActivity extends AppCompatActivity {
     private ImageButton btnBack, btnMinus, btnPlus;
     private Button btnCancel, btnSave;
     private RelativeLayout progressGroup;
-
-    private Drawable errorDrawable;
 
     // list references to Brands and Categories
     private List<Supplier> supplierList;
@@ -85,7 +81,6 @@ public class AddProductActivity extends AppCompatActivity {
         btnSave = findViewById(R.id.btn_save);
         progressGroup = findViewById(R.id.progress_group);
         dialogBuilder = new AlertDialog.Builder(this);
-        errorDrawable = AppCompatResources.getDrawable(this, R.drawable.ic_x_circle);
     }
 
     private void setListeners() {
@@ -201,22 +196,17 @@ public class AddProductActivity extends AppCompatActivity {
     }
 
     private boolean validated() {
-        // clear drawables
-        etName.setCompoundDrawablesWithIntrinsicBounds(null, null, null, null);
-        etPrice.setCompoundDrawablesWithIntrinsicBounds(null, null, null, null);
+        boolean isValid = true;
 
-        String name = etName.getText().toString();
-        String price = etPrice.getText().toString();
-
-        if (name.isBlank()) {
-            etName.setCompoundDrawablesWithIntrinsicBounds(null, null, errorDrawable, null);
+        if (etName.getText().toString().trim().isEmpty()) {
+            etName.setError("Required");
+            isValid = false;
         }
-
-        if (price.isBlank()) {
-            etPrice.setCompoundDrawablesWithIntrinsicBounds(null, null, errorDrawable, null);
+        if (etPrice.getText().toString().trim().isEmpty()) {
+            etPrice.setError("Required");
+            isValid = false;
         }
-
-        return !name.isBlank() && !price.isBlank();
+        return isValid;
     }
 
     private void saveAndClose() {
