@@ -122,7 +122,22 @@ public class EditWarehouseActivity extends AppCompatActivity {
     }
 
     private boolean validated() {
-        return !etName.getText().toString().isBlank();
+        boolean isValid = true;
+
+        if (etName.getText().toString().trim().isEmpty()) {
+            etName.setError("Required");
+            isValid = false;
+        }
+        if (etContact.getText().toString().trim().isEmpty()) {
+            etContact.setError("Required");
+            isValid = false;
+        }
+        if (etAddress.getText().toString().trim().isEmpty()) {
+            etAddress.setError("Required");
+            isValid = false;
+        }
+
+        return isValid;
     }
 
     private void saveAndClose() {
